force-app/main/default/objects/Credit_Card_Payments__c/Credit_Card_Payments__c.object-meta.xml
<CustomObject>
    <label>Credit Card Payments</label>
    <nameField>
        <displayFormat>CCP-{0000}</displayFormat>
        <label>Credit Card Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>