force-app/main/default/objects/Credit_Card_Payments__c/fields/Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Amount_Original__c</fullName>
    <formula>TAD_Booking_Records__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>