force-app/main/default/objects/Credit_Card_Payments__c/fields/Card_Number_last_4_digits__c.field-meta.xml
<CustomField>
    <fullName>Card_Number_last_4_digits__c</fullName>
    <label>Card Number last 4 digits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>