force-app/main/default/objects/Credit_Card_Payments__c/fields/Cash_Entry__c.field-meta.xml
<CustomField>
    <fullName>Cash_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Entry</label>
    <referenceTo>c2g__codaCashEntry__c</referenceTo>
    <relationshipLabel>Credit Card Payments</relationshipLabel>
    <relationshipName>Credit_Card_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>