force-app/main/default/objects/Credit_Card_Payments__c/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Card</label>
    <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
    <relationshipLabel>Credit Card Payments</relationshipLabel>
    <relationshipName>Credit_Card_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>