force-app/main/default/objects/Credit_Card_Payments__c/fields/Credit_Card_GLA__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_GLA__c</fullName>
    <label>Credit Card GLA</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>615 - Corporate Card - Chris Cowan</fullName>
            </value>
            <value>
                <fullName>616 - Corporate Card - Chris Jewell</fullName>
            </value>
            <value>
                <fullName>621 - Amex Card - Norm Black</fullName>
            </value>
            <value>
                <fullName>622 - Amex Card - Richard Johnston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>