force-app/main/default/objects/Credit_Card_Payments__c/fields/Merchant1__c.field-meta.xml
<CustomField>
    <fullName>Merchant1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Card Payments</relationshipLabel>
    <relationshipName>Credit_Card_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>