force-app/main/default/objects/Credit_Card_Payments__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <formula>IF(TAD_Booking_Records__r.Merchant__r.IsPersonAccount ,  TAD_Booking_Records__r.Merchant__r.FirstName  +&apos; &apos;+  TAD_Booking_Records__r.Merchant__r.LastName , TAD_Booking_Records__r.Merchant__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant</label>
    <type>Text</type>
</CustomField>