force-app/main/default/objects/Credit_Card_Payments__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <formula>TAD_Booking_Records__r.Payable_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable Invoice</label>
    <type>Text</type>
</CustomField>