force-app/main/default/objects/Credit_Card_Payments__c/fields/Process_PT__c.field-meta.xml
<CustomField>
    <fullName>Process_PT__c</fullName>
    <formula>And(
    or(
       Status__c = &quot;Paid&quot;,
       Status__c = &quot;Cancellation Processed&quot;
    ),
    not(isblank( Reference_Number__c)),
    not(isblank( text(Credit_Card_GLA__c))),
    text(CurrencyIsoCode)  = &quot;AUD&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process PT</label>
    <type>Checkbox</type>
</CustomField>