force-app/main/default/objects/Credit_Card_Payments__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <inlineHelpText>Invoice number</inlineHelpText>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>