force-app/main/default/objects/Credit_Card_Payments__c/fields/TAD_Booking_Records__c.field-meta.xml
<CustomField>
    <fullName>TAD_Booking_Records__c</fullName>
    <label>TAD Booking Records</label>
    <referenceTo>TAD_Booking_Records__c</referenceTo>
    <relationshipLabel>Credit Card Payments</relationshipLabel>
    <relationshipName>Credit_Card_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>