force-app/main/default/objects/Credit_Card_Payments__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <formula>TAD_Booking_Records__r.TAD_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAD Order</label>
    <type>Text</type>
</CustomField>