force-app/main/default/objects/Credit_Card_Payments__c/fields/Transaction_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Identifier__c</fullName>
    <label>Transaction Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>