force-app/main/default/objects/Credit_Card_Payments__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <formula>if(
    isblank(Refund_Amount__c),
    &quot;Payment&quot;,
    &quot;Payment Refund&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>