force-app/main/default/objects/Credit_Card_Payments__c/validationRules/Check_Currency_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Currency_Value</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt;   TEXT(TAD_Booking_Records__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Currency Should be same as TAD Booking Record&apos;s Currency</errorMessage>
</ValidationRule>